src/objects/Activity_Tracking_s_Icons__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Activity_Standard_Icona_Standard__c</fullName>
        <label>Activity Standard Icona Standard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Standard_Immagine__c</fullName>
        <label>Activity Standard Immagine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brunello_s_Contact_Icona_Standard__c</fullName>
        <label>Brunello&apos;s Contact Icona Standard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brunello_s_Contact_Immagine__c</fullName>
        <label>Brunello&apos;s Contact Immagine</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Icons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Icons</label>
        <type>Checkbox</type>
    </fields>
    <label>Activity Tracking&apos;s Icons</label>
</CustomObject>